--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rocket-shop",
   "private": true,
   "scripts": {
-    "start": "meteor run --port $IP:$PORT",
+    "start": "meteor run",
     "deploy": "DEPLOY_HOSTNAME=galaxy.meteor.com meteor deploy alexrocketshop --settings settings.json"
   },
   "dependencies": {
